preserve velocity view resolver

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,6 @@
 	<artifactId>tutorial</artifactId>
 	<name>affablebean-spring-tutorial</name>
 	<packaging>war</packaging>
-	<version>1.0.0</version>
 	<properties>
 		<org.springframework-version>3.2.5.RELEASE</org.springframework-version>
 		<org.springsecurity-version>3.2.0.RELEASE</org.springsecurity-version>
@@ -239,4 +238,5 @@
 			</plugin>
 		</plugins>
 	</build>
+	<version>BUILD-SNAPSHOT</version>
 </project>
