--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,11 @@
 			<artifactId>thymeleaf-extras-springsecurity3</artifactId>
 			<version>2.1.1.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>nz.net.ultraq.thymeleaf</groupId>
+			<artifactId>thymeleaf-layout-dialect</artifactId>
+			<version>1.2.7</version>
+		</dependency>
 
 		<!-- Logging -->
 		<dependency>
