--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,9 @@
 	<packaging>war</packaging>
 	<version>2.1.1</version>
 	<properties>
-		<org.springframework-version>3.2.5.RELEASE</org.springframework-version>
+		<org.springframework-version>3.2.12.RELEASE</org.springframework-version>
 		<org.springsecurity-version>3.2.0.RELEASE</org.springsecurity-version>
+		<org.springdatajpa-version>1.7.2.RELEASE</org.springdatajpa-version>
 		<org.slf4j-version>1.5.8</org.slf4j-version>
 		<org.hibernate-version>4.2.7.Final</org.hibernate-version>
 		<org.thymeleaf-version>2.1.3.RELEASE</org.thymeleaf-version>
@@ -61,6 +62,12 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-config</artifactId>
 			<version>${org.springsecurity-version}</version>
+		</dependency>
+		<!-- Spring Data JPA -->
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-jpa</artifactId>
+			<version>${org.springdatajpa-version}</version>
 		</dependency>
 
 		<!-- AspectJ -->
