--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.hvn</groupId>
-	<artifactId>tutorial</artifactId>
-	<name>affablebean-spring-tutorial</name>
+	<groupId>com.hvn.tutorial</groupId>
+	<artifactId>affablebean</artifactId>
 	<packaging>war</packaging>
 	<version>2.1.2</version>
 	<properties>
@@ -231,8 +230,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.3</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.8</source>
+					<target>1.8</target>
 					<compilerArgument>-Xlint:all</compilerArgument>
 					<showWarnings>true</showWarnings>
 					<showDeprecation>true</showDeprecation>
