update versions of the dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,12 @@
 	<packaging>war</packaging>
 	<version>2.1.2</version>
 	<properties>
-		<org.springframework-version>4.1.6.RELEASE</org.springframework-version>
-		<org.springsecurity-version>4.0.0.RELEASE</org.springsecurity-version>
-		<org.springdatajpa-version>1.8.0.RELEASE</org.springdatajpa-version>
-		<org.slf4j-version>1.7.12</org.slf4j-version>
-		<org.hibernate-version>4.3.9.Final</org.hibernate-version>
-		<org.thymeleaf-version>2.1.4.RELEASE</org.thymeleaf-version>
+		<org.springframework-version>4.3.2.RELEASE</org.springframework-version>
+		<org.springsecurity-version>4.1.1.RELEASE</org.springsecurity-version>
+		<org.springdatajpa-version>1.10.2.RELEASE</org.springdatajpa-version>
+		<org.hibernate-version>5.2.1.Final</org.hibernate-version>
+		<org.thymeleaf-version>3.0.1.RELEASE</org.thymeleaf-version>
+		<org.slf4j-version>1.7.21</org.slf4j-version>
 	</properties>
 	<dependencies>
 		<!-- Spring -->
@@ -73,13 +73,13 @@
 		<dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjrt</artifactId>
-			<version>1.8.5</version>
+			<version>1.8.9</version>
 		</dependency>
 
 		<!-- Persistence -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-entitymanager</artifactId>
+			<artifactId>hibernate-core</artifactId>
 			<version>${org.hibernate-version}</version>
 		</dependency>
 		<dependency>
@@ -90,7 +90,7 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.35</version>
+			<version>6.0.3</version>
 		</dependency>
 
 		<!-- Thyemleaf -->
@@ -107,12 +107,12 @@
 		<dependency>
 			<groupId>org.thymeleaf.extras</groupId>
 			<artifactId>thymeleaf-extras-springsecurity4</artifactId>
-			<version>2.1.2.RELEASE</version>
+			<version>3.0.0.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>nz.net.ultraq.thymeleaf</groupId>
 			<artifactId>thymeleaf-layout-dialect</artifactId>
-			<version>1.2.8</version>
+			<version>2.0.1</version>
 		</dependency>
 
 		<!-- Logging -->
@@ -123,38 +123,8 @@
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
-			<artifactId>jcl-over-slf4j</artifactId>
-			<version>${org.slf4j-version}</version>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>${org.slf4j-version}</version>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
-			<exclusions>
-				<exclusion>
-					<groupId>javax.mail</groupId>
-					<artifactId>mail</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>javax.jms</groupId>
-					<artifactId>jms</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>com.sun.jdmk</groupId>
-					<artifactId>jmxtools</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>com.sun.jmx</groupId>
-					<artifactId>jmxri</artifactId>
-				</exclusion>
-			</exclusions>
 			<scope>runtime</scope>
 		</dependency>
 
@@ -195,7 +165,7 @@
 		<dependency>
 			<groupId>org.assertj</groupId>
 			<artifactId>assertj-core</artifactId>
-			<version>1.7.1</version>
+			<version>3.5.2</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -212,26 +182,12 @@
 		</testResources>
 		<plugins>
 			<plugin>
-				<artifactId>maven-eclipse-plugin</artifactId>
-				<version>2.9</version>
-				<configuration>
-					<additionalProjectnatures>
-						<projectnature>org.springframework.ide.eclipse.core.springnature</projectnature>
-					</additionalProjectnatures>
-					<additionalBuildcommands>
-						<buildcommand>org.springframework.ide.eclipse.core.springbuilder</buildcommand>
-					</additionalBuildcommands>
-					<downloadSources>true</downloadSources>
-					<downloadJavadocs>true</downloadJavadocs>
-				</configuration>
-			</plugin>
-			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.3</version>
+				<version>3.5.1</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.8</source>
+					<target>1.8</target>
 					<compilerArgument>-Xlint:all</compilerArgument>
 					<showWarnings>true</showWarnings>
 					<showDeprecation>true</showDeprecation>
@@ -248,7 +204,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.18.1</version>
+				<version>2.19.1</version>
 				<configuration>
 					<includes>
 						<include>**/*Tests.java</include>
@@ -258,7 +214,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
-				<version>1.4.0</version>
+				<version>1.5.0</version>
 				<configuration>
 					<mainClass>org.test.int1.Main</mainClass>
 				</configuration>
