--- a/affablebean-persistence/src/main/resources/persistence.properties
+++ b/affablebean-persistence/src/main/resources/persistence.properties
@@ -1,6 +1,6 @@
 # data source configuration
 hibernate.connection.driver_class=com.mysql.cj.jdbc.Driver
-hibernate.connection.url=jdbc:mysql://localhost:3306/affablebean
+hibernate.connection.url=jdbc:mysql://localhost:3306/affablebean?autoReconnect=true&useSSL=false
 hibernate.connection.username=root
 hibernate.connection.password=password
 
