--- a/affablebean-web/pom.xml
+++ b/affablebean-web/pom.xml
@@ -4,15 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>affablebean-web</artifactId>
-    <version>2.1.2</version>
-    <packaging>war</packaging>
-
     <parent>
         <groupId>com.hvn.tutorial</groupId>
         <artifactId>affablebean</artifactId>
         <version>2.1.2</version>
     </parent>
+
+    <artifactId>affablebean-web</artifactId>
+    <packaging>war</packaging>
 
     <properties>
         <org.thymeleaf-version>3.0.1.RELEASE</org.thymeleaf-version>
@@ -29,11 +28,6 @@
         <!-- Thyemleaf -->
         <dependency>
             <groupId>org.thymeleaf</groupId>
-            <artifactId>thymeleaf</artifactId>
-            <version>${org.thymeleaf-version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.thymeleaf</groupId>
             <artifactId>thymeleaf-spring4</artifactId>
             <version>${org.thymeleaf-version}</version>
         </dependency>
@@ -46,20 +40,6 @@
             <groupId>nz.net.ultraq.thymeleaf</groupId>
             <artifactId>thymeleaf-layout-dialect</artifactId>
             <version>2.0.1</version>
-        </dependency>
-
-        <!-- AspectJ -->
-        <dependency>
-            <groupId>org.aspectj</groupId>
-            <artifactId>aspectjrt</artifactId>
-            <version>1.8.9</version>
-        </dependency>
-
-        <!-- @Inject -->
-        <dependency>
-            <groupId>javax.inject</groupId>
-            <artifactId>javax.inject</artifactId>
-            <version>1</version>
         </dependency>
 
         <!-- Servlet -->
@@ -82,12 +62,12 @@
         <dependency>
             <groupId>com.hvn.tutorial</groupId>
             <artifactId>affablebean-persistence</artifactId>
-            <version>2.1.2</version>
+            <version>${affablebean-version}</version>
         </dependency>
         <dependency>
             <groupId>com.hvn.tutorial</groupId>
             <artifactId>affablebean-service</artifactId>
-            <version>2.1.2</version>
+            <version>${affablebean-version}</version>
         </dependency>
     </dependencies>
 
