--- a/affablebean-persistence/pom.xml
+++ b/affablebean-persistence/pom.xml
@@ -60,7 +60,7 @@
         <dependency>
             <groupId>com.hvn.tutorial</groupId>
             <artifactId>affablebean-domain</artifactId>
-            <version>${affablebean-version}</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 </project>
