--- a/affablebean-web/pom.xml
+++ b/affablebean-web/pom.xml
@@ -62,12 +62,12 @@
         <dependency>
             <groupId>com.hvn.tutorial</groupId>
             <artifactId>affablebean-persistence</artifactId>
-            <version>${affablebean-version}</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.hvn.tutorial</groupId>
             <artifactId>affablebean-service</artifactId>
-            <version>${affablebean-version}</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
