--- a/afbb-gradle/.env.development
+++ b/afbb-gradle/.env.development
@@ -1,3 +1,3 @@
-CORS_ALLOWED_ORIGINS=http://localhost*
+CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001
 MONGODB_URI=mongodb://afbb-mongo:27017/afbb
 SPRING_PROFILES_ACTIVE=local
