implement category create/delete func

--- a/afbb-gradle/.devcontainer.json
+++ b/afbb-gradle/.devcontainer.json
@@ -12,8 +12,7 @@
         "vscjava.vscode-java-pack",
         "vscjava.vscode-lombok",
         "vmware.vscode-boot-dev-pack",
-        "anweber.vscode-httpyac",
-        "GitHub.copilot-chat"
+        "anweber.vscode-httpyac"
       ]
     }
   },
